Fix : Alignment compatibility for content

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -2753,7 +2753,7 @@ input[type="text"], input[type="password"], input[type="color"], input[type="dat
 
 .customize-control.customize-control-ast-toggle-control.ast-top-dotted-divider .ast-control-tooltip {
   position: absolute;
-  top: 52%;
+  top: 55%;
   left: 40px;
   transform: translateY(0);
 }
@@ -4775,7 +4775,8 @@ span.customize-control-title.ast-group-section-title {
 /**
  * Responsive slider control inside settings-group, case: body-font, headings-font.
  */
- .ast-fields-wrap .customize-control-ast-responsive-slider .ast-slider-wrap > label {
+ .ast-fields-wrap .customize-control-ast-responsive-slider .ast-slider-wrap > label,
+ .ast-fields-wrap .customize-control-ast-selector .ast-slider-wrap > label {
     display: inline-block;
 }
 
@@ -5030,8 +5031,12 @@ span.customize-control-title.ast-group-section-title {
     margin-bottom: 20px;
     font-size: 13px;
     margin-top: 3px;
-    display: block;
 }
+
+.customize-control-ast-sortable .ast-sortable-subfields-wrap .ast-responsive-btns {
+    top: 5px;
+}
+
 .ast-sortable-subfields-wrap .ast-fields-wrap {
     margin-right: -12px;
 	padding-bottom: 10px;
@@ -7351,7 +7356,8 @@ span.customize-control-title.ast-group-section-title {
 /**
  * Responsive slider control inside settings-group, case: body-font, headings-font.
  */
- .ast-fields-wrap .customize-control-ast-responsive-slider .ast-slider-wrap > label {
+ .ast-fields-wrap .customize-control-ast-responsive-slider .ast-slider-wrap > label,
+ .ast-fields-wrap .customize-control-ast-selector .ast-slider-wrap > label {
     display: inline-block;
 }
 
@@ -7606,8 +7612,12 @@ span.customize-control-title.ast-group-section-title {
     margin-bottom: 20px;
     font-size: 13px;
     margin-top: 3px;
-    display: block;
 }
+
+.customize-control-ast-sortable .ast-sortable-subfields-wrap .ast-responsive-btns {
+    top: 7px;
+}
+
 .ast-sortable-subfields-wrap .ast-fields-wrap {
     margin-right: -12px;
 	padding-bottom: 10px;
@@ -7649,7 +7659,7 @@ span.customize-control-title.ast-group-section-title {
     margin-right: auto;
 }
 .ast-sortable-subfields-wrap .customize-control-ast-responsive-slider .ast-responsive-slider-btns {
-    top: -5px;
+    top: -2px;
 }
 
 .customize-control-ast-toggle-control .components-toggle-control .components-base-control__field, .ast-togglecontrol-wrapper .components-base-control__field {
